--- a/main/busnow.css
+++ b/main/busnow.css
@@ -1,10 +1,18 @@
 body {
-  background-color: #ffffff;
-  margin: 0;
-  padding-top: 25px;
+  background-color: var(--main-color, #ffffff);
 }
 
-/* Estilos para la barra superior */
+.bus-icon {
+  width: 24px;
+  height: 24px;
+  background-image: url("/imagenes/busmapa.png"); /* Ruta a tu imagen .png */
+  background-size: cover;
+  border-radius: 50%;
+  
+}
+
+
+/* Estilos específicos para la barra superior */
 .top-bar {
   background-color: #466067;
   color: #fff;
@@ -18,34 +26,53 @@ body {
   z-index: 9999;
 }
 
-.top-bar ul {
-  list-style-type: none;
-  display: flex;
-  align-items: center;
-}
-
-.top-bar li {
+.top-bar .logo {
   margin-right: 10px;
 }
 
-.top-bar a {
-  color: #ffffff;
+.top-bar .logo img {
+  width: 30px;
+  height: 30px;
+}
+
+.top-bar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.top-bar ul li {
+  margin: 0 10px;
+}
+
+.top-bar ul li:first-child {
+  margin-left: 0;
+}
+
+.top-bar ul li:last-child {
+  margin-right: 0;
+}
+
+.top-bar ul li a {
+  color: #fff;
   text-decoration: none;
 }
 
-.top-bar a:hover {
+.top-bar ul li a:hover {
   border: 1px solid #c4c8c5;
   padding: 5px;
   border-radius: 5px;
 }
 
-.top-bar a.active {
+.top-bar ul li a.active {
   border: 1px solid #fff;
   padding: 5px;
   border-radius: 5px;
 }
 
-/* Estilos para el menú desplegable */
 .menu {
   position: relative;
   margin: 20px;
@@ -54,7 +81,7 @@ body {
 
 .dark-mode-label {
   margin-left: 10px;
-  color: #484450; /* Color del texto */
+  color: #484450;
   font-weight: bold;
 }
 
@@ -121,7 +148,7 @@ input:checked + .slider:before {
 .menu-dropdown {
   display: none;
   position: absolute;
-  background-color: #459a96;
+  background-color: #d3d2d2;
   min-width: 150px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   padding: 12px 16px;
@@ -139,49 +166,118 @@ input:checked + .slider:before {
   width: 100%;
 }
 
-/* Estilos para el mapa */
-#map {
-  height: calc(100vh - 60px);
-  width: 100%;
-  margin-top: 60px;
+/* Estilos para hacer la página responsive */
+@media only screen and (max-width: 768px) {
+  .content {
+    padding: 10px;
+  }
+
+  table th,
+  table td {
+    padding: 8px;
+  }
+
+  h1 {
+    font-size: 20px;
+  }
+
+  p {
+    font-size: 14px;
+  }
+
+  body {
+    padding-top: 50px; /* Ajustado para dejar espacio para la barra superior */
+  }
 }
 
-/* Estilos para hacer la página responsive */
+/* Estilos para el mapa */
+#map {
+  height: 100vh;
+  width: 100%;
+}
+
+#bus-marker {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 30px;
+  height: 30px;
+  background-image: url("/imagenes/busmapa.png"); /* Ruta a tu imagen .png */
+  background-size: cover;
+  border-radius: 50%;
+}
+
+
+/* Estilos para el tiempo restante */
+#tiempo-restante {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #014d49;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+/* Estilos para el pie de página */
+footer {
+  background-color: #466067;
+  color: #fff;
+  padding: 10px;
+  text-align: center;
+}
+
+footer p {
+  margin: 0;
+}
+
+/* Estilos adicionales para hacer la página responsive */
 @media only screen and (max-width: 768px) {
   .top-bar {
     flex-direction: column;
-    padding: 10px 0;
+    align-items: flex-start;
+    padding: 10px 20px;
   }
 
   .top-bar ul {
-    flex-direction: column;
-    align-items: flex-start;
-    width: 100%;
+    justify-content: flex-start;
   }
 
-  .top-bar li {
-    margin: 5px 0;
+  .top-bar ul li {
+    margin: 10px 0;
+  }
+
+  .top-bar .logo img {
+    width: 40px;
+    height: 40px;
+  }
+
+  .menu {
+    margin: 10px 0;
+  }
+
+  .dark-mode-label {
+    margin-left: 0;
+    margin-right: 10px;
+  }
+
+  .switch {
+    margin-left: 0;
   }
 
   .menu-dropdown {
     position: static;
-    display: none;
-    width: 100%;
-    top: initial;
-    right: initial;
-    left: 0;
-  }
-
-  .menu:hover .menu-dropdown {
     display: block;
+    background-color: transparent;
+    box-shadow: none;
+    padding: 0;
+    margin-top: 10px;
   }
 
-  #map {
-    height: calc(100vh - 60px);
-    width: 100%;
-  }  
-}
-
-.mapboxgl-canvas-container .mapboxgl-canvas .mapboxgl-interactive.mapboxgl-line {
-  visibility: hidden !important;
+  #tiempo-restante {
+    bottom: 10px;
+    padding: 5px;
+    font-size: 12px;
+  }
 }
